--- a/README
+++ b/README
@@ -1,19 +1,22 @@
-Lingua-Jspell
+-------------------------------------------------------------------------------
+ Lingua-Jspell
+-------------------------------------------------------------------------------
 
+Lingua-Jspell is a morphological analyser. Its first version were
+distributed based on a C package with autoconf/automake/libtool
+configuration. Given that main usage of Jspell is done through its Perl
+interface, Jspell is now made available as a Perl module, that includes
+the original C code unmodified.
 
-Lingua-Jspell is a morphological analyser. Its first version were distributed
-based on a C package with autoconf/automake/libtool configuration. Given that
-main usage of Jspell is done through its Perl interface, Jspell is now made
-available as a Perl module, that includes the original C code unmodified.
-
-For the installation you need a C compiler and YACC or Bison. The building
-tools will try to detect them but it is not guaranteed that they will be
-detected correctly.
+For the installation you need a C compiler and YACC or Bison. The
+building tools will try to detect them but it is not guaranteed that
+they will be detected correctly.
 
 Please refer to the documentation or http://natura.di.uminho.pt/ for
 further details on Jspell usage and Jspell dictionaries.
 
-INSTALLATION
+ INSTALLATION
+-------------------------------------------------------------------------------
 
 To install this module, run the following commands:
 
@@ -25,7 +28,9 @@ To install this module, run the following commands:
 Please submit build problems as RT tickets using 
 bug-lingua-jspell@rt.cpan.org
 
-COPYRIGHT AND LICENCE
+ COPYRIGHT AND LICENCE
+-------------------------------------------------------------------------------
 
 Copyright (C) 2008 Projecto Natura
 
+-------------------------------------------------------------------------------
