--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Lingua-Jspell
 
+1.50_04 March 21, 2008
+	- Corrected scripts/installdic.in to create directory before
+      copying files.
+
 1.50_03 March 20, 2008
 	- Corrected t/pod-coverage.t test to work with perl 5.10.0.
 	- Added script to install Portuguese dictionary dinamically.
