Adicionado o jspell.pc de novo para que o EMS possa detectar o jspell sem problemas. Ainda falta por o sitema a construir uma biblioteca. Nao sei bem como isso se faz... mas vou descobrir }:->
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@5578 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+	- Added jspell.pc to help other tools to detect the C library
+	  (although the library is not being built yet).
+
 1.50_05 March 23, 2008
 	- Portability to Microsoft Windows under development
 	  (although without ncurses => no interactive spell checking)
