--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Lingua-Jspell
 
+	- Added code to create dynamic libraries under MacOS and Linux
 	- Added jspell.pc to help other tools to detect the C library
 	  (although the library is not being built yet).
 
