Added line on Changes
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@5700 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+1.55
+	- Removed agrep source code and its dependency;
+
 1.54    April 23, 2008
 	- Add code to check ncurses.h header file availability;
 	- a Jspell library is now built under Linux, MacOS and Windows;
