--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Lingua-Jspell
 
-1.55
+1.55    June 3, 2008
 	- Removed agrep source code and its dependency;
+	- Corrected dependencies on some modules;
 
 1.54    April 23, 2008
 	- Add code to check ncurses.h header file availability;
