--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+1.58 January 14, 2008
+	- fixed bug with build.pl under linux systems.
+
 1.57 November 21, 2008
    - Rewritten the build.pl script to detect properly the installation
      path (I hope).
