--- a/Changes
+++ b/Changes
@@ -1,9 +1,11 @@
 Revision history for Lingua-Jspell
 
-1.61 ... NOT YET RELEASED
+1.61 February 15, 2009
    - Added jspell-dump script to dump all words and flexions for a
-     dictionary or list of words.
-   - Fixed problem with forks usage on der method.
+     dictionary or list of words;
+   - Fixed problem with forks usage on der method;
+   - Fixed problem with jspell personal dictionaries;
+   - Make jspell complain when no dictionary can be opened.
 
 1.60 January 23, 2009
     - fixed problem with windows and open2.
