- Handle correctly dictionaries that do not ship a .irr file
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@7248 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Lingua-Jspell
 
 1.62
+   - Handle correctly dictionaries that do not ship a .irr file
    - Bettered ujspell handle of single-letter analysis
 
 1.61 February 15, 2009
