--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Lingua-Jspell
 
-1.67
+1.67 Setember 23, 2010
    - Fixed small detail on 'nearmatches' method
+   - Changed dependencies on ExtUtils::LibBuilder
 
 1.66 July 13, 2010
    - Added 'nearmatches' method.
