mais umas releases
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@13175 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+1.88 February 21, 2015
+   - more taint fixes;
+
 1.87 February 20, 2015
    - fix Windows that was broken since taint fix;
 
