--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+1.90 October 17, 2015
+   - consistent versioning;
+
 1.89 February 21, 2015
    - fix missing space;
 
