--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Lingua-Jspell
 
+   - added jspell-to command line utility;
+
 1.91 March 14, 2016
    - localize $. everywhere (hopefully);
 
