--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Lingua-Jspell
 
+1.92 March 3, 2017
+   - added --flush option to ujspell;
    - added jspell-to command line utility;
 
 1.91 March 14, 2016
