--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+1.94 February 22, 2020
+   - validate prefix/suffix before replacing it;
+
 1.93 June 6, 2017
    - make ujspell croak to standard error;
 
