--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Lingua-Jspell
 
+1.96 August 1, 2021
+   - C99 compliance
+    
 1.95 June 4, 2021
    - Use HTTPs to fetch dictionary
 
